--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     <header>
         <div class="container">
             <div class="hero">
-                <h1>Привет, я [Твоё Имя]</h1>
-                <p>Начинающий веб-разработчик и программист</p>
+                <h1>Привет, я [Айсина Оксана]</h1>
+                <p>Магистр психологии в области психоанализа, психоаналитический консультант, арт-терапевтт</p>
             </div>
         </div>
     </header>
@@ -159,7 +159,7 @@
         <div class="container nav-container">
             <div class="logo">МоёПортфолио</div>
             <ul class="nav-links">
-                <li><a href="#about">Обо мне</a></li>
+                <li><a href="#about">Приветствую Вас на моем сайте!  Меня зовут Оксана Алексеевна, я магистр психологии в области психоанализа, психоаналитический консультант, арт-терапевт. Работаю в полимодальном подходе. Помогаю людям понять и принять себя, вернуть себе ощущение целостности, научиться видеть жизнь не через страх и защиту, а через осознанность и открытость. Работаю с эмигрантами, с подростками. Имею опыт работы с травмами, изучаю эту тему.  Можно ознакомиться с моими публикациями на B17 </a></li>
                 <li><a href="#skills">Навыки</a></li>
                 <li><a href="#projects">Проекты</a></li>
                 <li><a href="#contact">Контакты</a></li>
