--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <header>
         <div class="container">
             <div class="hero">
-                <h1>Привет, я [Айсина Оксана]</h1>
+                <h1>Привет, я Айсина Оксана Алексеевна </h1>
                 <p>Магистр психологии в области психоанализа, психоаналитический консультант, арт-терапевтт</p>
             </div>
         </div>
@@ -159,7 +159,7 @@
         <div class="container nav-container">
             <div class="logo">МоёПортфолио</div>
             <ul class="nav-links">
-                <li><a href="#about">Приветствую Вас на моем сайте!  Меня зовут Оксана Алексеевна, я магистр психологии в области психоанализа, психоаналитический консультант, арт-терапевт. Работаю в полимодальном подходе. Помогаю людям понять и принять себя, вернуть себе ощущение целостности, научиться видеть жизнь не через страх и защиту, а через осознанность и открытость. Работаю с эмигрантами, с подростками. Имею опыт работы с травмами, изучаю эту тему.  Можно ознакомиться с моими публикациями на B17 </a></li>
+                <li><a href="#about"> </a></li>
                 <li><a href="#skills">Навыки</a></li>
                 <li><a href="#projects">Проекты</a></li>
                 <li><a href="#contact">Контакты</a></li>
@@ -173,7 +173,26 @@
             <div class="about-content">
                 <div>
                     <h3>Кто я</h3>
-                    <p>Я начинающий программист, который любит создавать интересные проекты. Увлекаюсь веб-разработкой, Python и всем, что связано с технологиями.</p>
+                    <p>Я магистр психологии в области психоанализа, психоаналитический консультант, арт-терапевт. Работаю в полимодальном подходе. Помогаю людям понять и принять себя, вернуть себе ощущение целостности, научиться видеть жизнь не через страх и защиту, а через осознанность и открытость. Работаю с эмигрантами, с подростками. Имею опыт работы с травмами, изучаю эту тему. Говорю на 3х языках 
+
+Среди обратившихся ко мне люди из Европы и России
+
+
+Являюсь членом Общероссийской психоаналитической лиги
+
+
+
+
+Регулярно прохожу супервизии у членов международной психоаналитической ассоциации (IPA)
+
+Являюсь кандидатом в клиническую группу ПОС
+
+
+
+Постоянно углубляю свои знания, посещая теоретические и практические семинары, а также лекции у ведущих психоаналитиков: Джузеппе Чевитарезе,  Всеволод Агарков, Авнер Бергштейн , Салман Ахтар Жаклин Шаффер, Лявас Каварски, и др
+
+Являюсь автором научных публикаций по различным психологическим темам и регулярно пишу статьи и размышления, затрагивающие вопросы психики, поведения и внутренней трансформации человека.
+</p>
                 </div>
                 <div>
                     <h3>Мои цели</h3>
