--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     <header>
         <div class="container">
             <div class="hero">
-                <h1>Привет, я Айсина Оксана Алексеевна </h1>
-                <p>Магистр психологии в области психоанализа, психоаналитический консультант, арт-терапевтт</p>
+                <h1>Привет, я Чёбина Марина Станиславовна</h1>
+                <p>Начинающий веб-разработчик и программист</p>
             </div>
         </div>
     </header>
@@ -159,7 +159,7 @@
         <div class="container nav-container">
             <div class="logo">МоёПортфолио</div>
             <ul class="nav-links">
-                <li><a href="#about"> </a></li>
+                <li><a href="#about">Обо мне</a></li>
                 <li><a href="#skills">Навыки</a></li>
                 <li><a href="#projects">Проекты</a></li>
                 <li><a href="#contact">Контакты</a></li>
@@ -173,26 +173,7 @@
             <div class="about-content">
                 <div>
                     <h3>Кто я</h3>
-                    <p>Я магистр психологии в области психоанализа, психоаналитический консультант, арт-терапевт. Работаю в полимодальном подходе. Помогаю людям понять и принять себя, вернуть себе ощущение целостности, научиться видеть жизнь не через страх и защиту, а через осознанность и открытость. Работаю с эмигрантами, с подростками. Имею опыт работы с травмами, изучаю эту тему. Говорю на 3х языках 
-
-Среди обратившихся ко мне люди из Европы и России
-
-
-Являюсь членом Общероссийской психоаналитической лиги
-
-
-
-
-Регулярно прохожу супервизии у членов международной психоаналитической ассоциации (IPA)
-
-Являюсь кандидатом в клиническую группу ПОС
-
-
-
-Постоянно углубляю свои знания, посещая теоретические и практические семинары, а также лекции у ведущих психоаналитиков: Джузеппе Чевитарезе,  Всеволод Агарков, Авнер Бергштейн , Салман Ахтар Жаклин Шаффер, Лявас Каварски, и др
-
-Являюсь автором научных публикаций по различным психологическим темам и регулярно пишу статьи и размышления, затрагивающие вопросы психики, поведения и внутренней трансформации человека.
-</p>
+                    <p>Я начинающий программист, который любит создавать интересные проекты. Увлекаюсь веб-разработкой, Python и всем, что связано с технологиями.</p>
                 </div>
                 <div>
                     <h3>Мои цели</h3>
@@ -252,16 +233,16 @@
         <div class="container">
             <h2 class="section-title">Контакты</h2>
             <div style="text-align: center;">
-                <p>📧 Email: твой.email@example.com</p>
-                <p>💼 GitHub: github.com/твоё_имя</p>
-                <p>📱 Телеграм: @твой_ник</p>
+                <p>📧 Email: krupinam.s@gmail.com</p>
+                <p>💼 GitHub: github.com/tide1983</p>
+                <p>📱 Телеграм: @kak_to_tak1983</p>
             </div>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>© 2024 Моё Портфолио. Сделано с ❤️ через GitHub Pages</p>
+            <p>© 2025 Моё Портфолио. Сделано с ❤️ через GitHub Pages</p>
         </div>
     </footer>
 </body>
